avances de chat

--- a/Back-End/src/main/resources/static/index.html
+++ b/Back-End/src/main/resources/static/index.html
@@ -12,10 +12,13 @@
 
 <div id="username-page">
     <div class="username-page-container">
-        <h1 class="title">Type your username to enter the Chatroom</h1>
+        <h1 class="title">Type your username and recipient's ID to enter the Chatroom</h1>
         <form id="usernameForm" name="usernameForm">
             <div class="form-group">
-                <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control" />
+                <input type="number" id="name" placeholder="Your Username" autocomplete="off" class="form-control" />
+            </div>
+            <div class="form-group">
+                <input type="number" id="recipientId" placeholder="Recipient's ID" autocomplete="off" class="form-control" />
             </div>
             <div class="form-group">
                 <button type="submit" class="accent username-submit">Start Chatting</button>
